--- a/research/index.html
+++ b/research/index.html
@@ -58,6 +58,25 @@
 		</p>
 		
 		<p>
+			<strong>Slurring without nouns</strong><br>
+			<em>Topoi</em><br>
+			w/ <a href="http://gerhard.schaden.free.fr/" target="_blank" rel="noopener">Gerhard Schaden</a><br>
+			<a data-bs-toggle="collapse" href=#slurs-nouns aria-expanded="false" role="button" aria-controls=slurs-nouns>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/slurs-nouns.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://doi.org/10.1093/jos/ffae017" target="_blank" rel="noopener">doi</a>
+		</p>
+		<div id=slurs-nouns class=collapse>
+			<p class="font-monospace small">
+				When we think of slurs in English - like the N-word, the F-word, and others - we tend to think of nouns rather than verbs or adjectives.
+				This is probably not an accident: paradigm examples of slurs are indeed nominal in nature, and slurs exhibit a cross-linguistically robust tendency to concentrate in the grammatical class of nouns. But why?
+				Recent work appears to suggest that the distributional predominance of nominal slurs is due to the fact that the offensiveness characteristic of slurs is downstream from the inferential biases associated with nominals and their predicative uses.
+				We begin with describing this hypothesis, rehearsing the considerations in its favor, and clarifying its predictions.
+				Next, we present cross-linguistic data from Italian and German indicating the need for a more nuanced picture of the distributional pattern. Finally, we make our proposal.
+				We suggest that slur-level offensiveness is a class-insensitive achievement, yet slurs are often nouns because membership in the grammatical class of nouns is functionally conducive to higher derogatory potency.
+			</p>
+		</div>
+
+		<p>
 			<strong>Bare singular names and genericity</strong><br>
 			<em>Journal of Semantics</em><br>
 			<a data-bs-toggle="collapse" href=#bare-names-generics aria-expanded="false" role="button" aria-controls=bare-names-generics>abstract</a> |
