--- a/research/index.html
+++ b/research/index.html
@@ -63,7 +63,7 @@
 			w/ <a href="http://gerhard.schaden.free.fr/" target="_blank" rel="noopener">Gerhard Schaden</a><br>
 			<a data-bs-toggle="collapse" href=#slurs-nouns aria-expanded="false" role="button" aria-controls=slurs-nouns>abstract</a> |
 			<a href="https://lcgasparri.github.io/papers/slurs-nouns.pdf" target="_blank" rel="noopener">local</a> |
-			<a href="https://doi.org/10.1093/jos/ffae017" target="_blank" rel="noopener">doi</a>
+			<a href="https://doi.org/10.1007/s11245-025-10186-4" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=slurs-nouns class=collapse>
 			<p class="font-monospace small">
