--- a/misc/index.html
+++ b/misc/index.html
@@ -62,6 +62,7 @@
 				<li>Acta Analytica</li>
 				<li>Analysis</li>
 				<li>Biological Reviews</li>
+				<li>Cr&iacute;tica: Revista Hispanoamericana de Filosof&iacute;a</li>
 				<li>Dialectica</li>
 				<li>Erkenntnis</li>
 				<li>European Journal for Philosophy of Religion</li>
