--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 	<title>Home | Luca Gasparri</title>
 
 	<meta charset=utf-8>
-	<meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name=description content="Personal website of Luca Gasparri, a researcher at the Centre National de la Recherche Scientifique">
 	<meta name=keywords content="luca gasparri,luca,gasparri,CNRS,STL,lille,philosophy,philosophie,filosofia,language,langage,sprache,linguaggio,mind,esprit,geist,mente,linguistics,
 	linguistique,sprachwissenschaft,linguistik,linguistics,semantics,semantique,semantik,semantica,meaning,sens,bedeutung,significato">
 	<meta name=author content="Luca Gasparri">
-	<meta name=viewport content="width=device-width, initial-scale=1">
+	<meta name=viewport content="width=device-width, initial-scale=1 shrink-to-fit=no">
 	<link rel=canonical href="https://lcgasparri.github.io">
 	<link rel="icon" href="https://lcgasparri.github.io/images/lambda.ico">
 
@@ -50,7 +49,7 @@
 
 	<!-- Title -->
 	<div class="container pt-4">
-		<h1 class="text-center display-3">
+		<h1 class="display-3 text-center">
 			home
 		</h1>
 	</div>
@@ -64,7 +63,7 @@
 			</div>
 			<div class="col-xl-9 col-lg-8 col-md-12 col-12">
 				<p class="lead pb-2">
-					I&rsquo;m a tenured <a href="https://www.cnrs.fr/" target="_blank" rel="noopener">CNRS</a> researcher and a member of <a href="https://stl.univ-lille.fr/" target="_blank" rel="noopener">STL</a> in Lille, France.
+					I&rsquo;m a <a href="https://www.cnrs.fr/" target="_blank" rel="noopener">CNRS</a> researcher and a member of <a href="https://stl.univ-lille.fr/" target="_blank" rel="noopener">STL</a> in Lille, France.
 				</p>
 				<p>
 					I work mainly in contemporary philosophy of language.
