--- a/misc/index.html
+++ b/misc/index.html
@@ -46,7 +46,7 @@
 
 	<!-- Title -->
 	<div class="container pt-4">
-		<h1 class="text-center display-3">
+		<h1 class="display-3 text-center">
 			misc
 		</h1>
 	</div>
