--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,9 @@
 			<code>&lt;myfirstname&gt;.&lt;mylastname&gt;&#64;cnrs.fr</code><br>
 		</p>
 		<p>
-			Find me on <a href="https://philpeople.org/profiles/luca-gasparri/" target="_blank" rel="noopener">PhilPeople</a> and <a href="https://orcid.org/0000-0002-0270-9262" target="_blank" rel="noopener">OrcID</a>.
+			Find me on <a href="https://philpeople.org/profiles/luca-gasparri/" target="_blank" rel="noopener">PhilPeople</a>,
+			<a href="https://orcid.org/0000-0002-0270-9262" target="_blank" rel="noopener">OrcID</a>,
+			and <a href="https://hal.science/search/index/q/*/authIdHal_s/luca-gasparri" target="_blank" rel="noopener">HAL</a>.
 		</p>
 		<div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6 pt-3 pb-3">
 			<div class="ratio ratio-16x9">
