--- a/misc/index.html
+++ b/misc/index.html
@@ -57,6 +57,20 @@
 			Service, membership, et alia.
 		</p>
 		<p>
+			I&rsquo;m an elected member of the French National Committee for Scientific Research (<a href="https://www.cnrs.fr/comitenational/" target="_blank" rel="noopener">CoNRS</a>).<br>
+			Section 36, Language sciences (Sept. 2025 - Sept. 2029).
+		</p>
+		<p>
+			I&rsquo;m a member of:
+			<ul>
+				<li>the <a href="http://analyticphilosophy.eu/" target="_blank" rel="noopener">European Society for Analytic Philosophy</a></li>
+				<li>the <a href="https://www.aristoteliansociety.org.uk/" target="_blank" rel="noopener">Aristotelian Society</a></li>
+				<li>the <a href="https://alumni-ehess.fr/" target="_blank" rel="noopener">EHESS Alumni Association</a></li>
+				<li>the <a href="https://alumni.harvard.edu/" target="_blank" rel="noopener">Harvard Alumni Association</a></li>
+				<li>the <a href="https://www.humboldt-foundation.de/" target="_blank" rel="noopener">Alumni of the Alexander von Humboldt-Stiftung</a>
+			</ul>
+		</p>
+		<p>
 			I&rsquo;ve refereed papers, chapters or abstracts for:
 			<ul>
 				<li>Acta Analytica</li>
@@ -102,16 +116,6 @@
 				<li>Language and Languages at the Crossroad of Disciplines (<a href="https://llcd.cnrs.fr/en/" target="_blank" rel="noopener">LLcD</a>)</li>
 				<li>Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)</li>
 				<li>Congress of the <a href="https://sophaphilo.org/" target="_blank" rel="noopener">SoPhA</a></li>
-			</ul>
-		</p>
-		<p>
-			Member of:
-			<ul>
-				<li><a href="http://analyticphilosophy.eu/" target="_blank" rel="noopener">European Society for Analytic Philosophy</a></li>
-				<li><a href="https://www.aristoteliansociety.org.uk/" target="_blank" rel="noopener">Aristotelian Society</a></li>
-				<li><a href="https://alumni-ehess.fr/" target="_blank" rel="noopener">EHESS Alumni Association</a></li>
-				<li><a href="https://alumni.harvard.edu/" target="_blank" rel="noopener">Harvard Alumni Association</a></li>
-				<li><a href="https://www.humboldt-foundation.de/" target="_blank" rel="noopener">Alumni of the Alexander von Humboldt-Stiftung</a>
 			</ul>
 		</p>
 		<p>
