--- a/research/index.html
+++ b/research/index.html
@@ -56,6 +56,24 @@
 		<p class="pb-2 lead">
 			Some things I&rsquo;ve written.
 		</p>
+
+		<p>
+			<strong>Animal metasemantics</strong><br>
+			<em>Biology &amp; Philosophy</em><br>
+			<a data-bs-toggle="collapse" href=#animal-meta aria-expanded="false" role="button" aria-controls=animal-meta>abstract</a> |
+			<a href="https://lcgasparri.github.io/papers/animal-meta.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://doi.org/10.1007/s10539-025-09993-1" target="_blank" rel="noopener">doi</a>
+		</p>
+		<div id=animal-meta class=collapse>
+			<p class="font-monospace small">
+				Multiple scholars in animal communication research have proposed that models of animal signals should appropriate theoretical terminology and concepts from natural language semantics.
+				However, the application of semantic descriptors to nonhuman communication is a delicate undertaking.
+				The goal of this paper is to consider whether there are any basic methodological principles that can help us determine whether the appropriation of a semantic descriptor by an animal model is justified or unwarranted.
+				I begin by drawing a parallel between types of theories of meaning and types of theories of signal content, and propose to categorize the metatheoretical issues surrounding the application of semantic descriptors to animal signals under the banner of an animal metasemantics.
+				I then develop three simple conditions on the operation: a condition of epistemic fertility, one of intensional depth, and one of grammatical congruity.
+				Finally, I showcase how these heuristics can assist theory production and help identify strengths and opportunities for improvement in emerging projects in animal linguistics.
+			</p>
+		</div>
 		
 		<p>
 			<strong>Slurring without nouns</strong><br>
