--- a/research/index.html
+++ b/research/index.html
@@ -52,9 +52,10 @@
 	</div>
 
 	<!-- Research -->
-	<div class="container pt-3 pb-4">
-		<p class="pb-2 lead">
-			Some things I&rsquo;ve written.
+	<div class="container pt-4 pb-4">
+		<p>
+			Some publications, more or less in reverse chronological order.<br>
+			<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.
 		</p>
 
 		<p>
