--- a/misc/index.html
+++ b/misc/index.html
@@ -55,7 +55,7 @@
 	<div class="container pt-4 pb-4">
 		<p>
 			I&rsquo;m an elected member of the French National Committee for Scientific Research (<a href="https://www.cnrs.fr/comitenational/" target="_blank" rel="noopener">CoNRS</a>).<br>
-			Section 36, Language sciences (Sept. 2025 - Sept. 2029).
+			<a href="https://www.cnrs.fr/comitenational/contact/annuaire.php?inst=36" target="_blank" rel="noopener">Section 36</a>, Language sciences (Sept. 2025 - Sept. 2029).
 		</p>
 		<p>***</p>
 		<p>
