--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/research/">Research</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/talks/">Talks</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/misc/">Misc</a>
 					</li>
 					<li class="nav-item">
@@ -63,7 +66,7 @@
 			</div>
 			<div class="col-xl-9 col-lg-8 col-md-12 col-12">
 				<p>
-					I&rsquo;m a <a href="https://www.cnrs.fr/" target="_blank" rel="noopener">CNRS</a> researcher and a member of <a href="https://stl.univ-lille.fr/" target="_blank" rel="noopener">STL</a> in Lille, France.
+					I&rsquo;m a <a href="https://www.cnrs.fr/" target="_blank" rel="noopener">CNRS</a> researcher and a member of the <a href="https://stl.univ-lille.fr/" target="_blank" rel="noopener">STL</a> lab in Lille, France.
 				</p>
 				<p>
 					I work mainly in contemporary philosophy of language.
