--- a/talks/index.html
+++ b/talks/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Contact | Luca Gasparri</title>
+	<title>Talks | Luca Gasparri</title>
 
 	<meta charset=utf-8>
 	<meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,13 +34,13 @@
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/research/">Research</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/talks/">Talks</a>
+						<a class="nav-link active" aria-current="page" href="#">Talks</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/misc/">Misc</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Contact</a>
+						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/contact/">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -50,35 +50,50 @@
 	<!-- Title -->
 	<div class="container pt-4">
 		<h1 class="display-3 text-center">
-			contact
+			talks
 		</h1>
 	</div>
 
-	<!-- Contact -->
+	<!-- Talks -->
 	<div class="container pt-4 pb-4">
-		<address>
-			STL, UMR CNRS 8163, Universit&eacute; de Lille<br>
-			Domaine du Pont de Bois, Rue du Barreau<br>
-			59650 Villeneuve d&rsquo;Ascq, FRANCE
-		</address>
 		<p>
-			B&acirc;timent B, Bureau B1.681<br>
-			<a href="https://osm.org/go/0EgKg5QXP-?m=" target="_blank" rel="noopener">openstreetmap</a> |
-			<a href="https://masalle.univ-lille.fr/resultat?numsalle=B1.681" target="_blank" rel="noopener">campus map</a>
+			Some recent / upcoming presentations.
 		</p>
 		<p>
-			<code>&lt;myfirstname&gt;.&lt;mylastname&gt;&#64;cnrs.fr</code><br>
+			<em>Logic and Engineering of Natural Language Semantics 21</em> (LENLS21)<br>
+			November 28<sup>th</sup>&ndash;30<sup>th</sup>, 2025<br>
+			Nagoya, Japan (invited)
 		</p>
 		<p>
-			Find me on <a href="https://philpeople.org/profiles/luca-gasparri/" target="_blank" rel="noopener">PhilPeople</a>,
-			<a href="https://orcid.org/0000-0002-0270-9262" target="_blank" rel="noopener">OrcID</a>,
-			and <a href="https://hal.science/search/index/q/*/authIdHal_s/luca-gasparri" target="_blank" rel="noopener">HAL</a>.
+			<em>SOPhiA Workshop on the Ontology of Language</em><br>
+			September 4<sup>th</sup>, 2025<br>
+			Salzburg, Austria (invited)
 		</p>
-		<div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6 pt-3 pb-3">
-			<div class="ratio ratio-16x9">
-				<iframe src="https://www.openstreetmap.org/export/embed.html?bbox=3.122012047679164%2C50.62674726569862%2C3.134768633753993%2C50.63096682649396&amp;layer=mapnik&amp;marker=50.6288570934341%2C3.128390340716578" class="border border-primary rounded-3"></iframe>
-			</div>
-		</div>
+		<p>
+			<em>10<sup>th</sup> Congress of the French Society for Analytic Philsoophy</em> (SoPhA)<br>
+			June 30<sup>th</sup>&ndash;July 2<sup>nd</sup>, 2025<br>
+			Nantes, France (refereed)
+		</p>
+		<p>
+			<em>Part-Whole Structure and its Reflection in Natural Language</em><br>
+			January 23<sup>rd</sup>&ndash;24<sup>th</sup>, 2025<br>
+			Nice, France (invited)
+		</p>
+		<p>
+			<em>1<sup>st</sup> Baltic Workshop in the Philosophy of Language</em><br>
+			September 16<sup>th</sup>&ndash;19<sup>th</sup>, 2024<br>
+			Krynica Morska, Poland (refereed)
+		</p>
+		<p>
+			<em>2<sup>nd</sup> Paris Workshop on Games, Decisions, and Language</em><br>
+			June 13<sup>th</sup>&ndash;15<sup>th</sup>, 2024<br>
+			Paris, France (invited)
+		</p>
+		<p>
+			<em>Annual Conference of the German Linguistic Society</em> (DGfS)<br>
+			February 28<sup>th</sup>&ndash;March 1<sup>st</sup>, 2024<br>
+			Bochum, Germany (refereed)
+		</p>
 	</div>
 
 	<!-- Footer -->
