--- a/misc/index.html
+++ b/misc/index.html
@@ -34,6 +34,9 @@
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/research/">Research</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/talks/">Talks</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" href="#">Misc</a>
 					</li>
 					<li class="nav-item">
