--- a/research/index.html
+++ b/research/index.html
@@ -34,6 +34,9 @@
 						<a class="nav-link active" aria-current="page" href="#">Research</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/talks/">Talks</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="https://lcgasparri.github.io/misc/">Misc</a>
 					</li>
 					<li class="nav-item">
