--- a/talks/index.html
+++ b/talks/index.html
@@ -70,7 +70,7 @@
 			Salzburg, Austria (invited)
 		</p>
 		<p>
-			<em>10<sup>th</sup> Congress of the French Society for Analytic Philsoophy</em> (SoPhA)<br>
+			<em>10<sup>th</sup> Congress of the French Society for Analytic Philosophy</em> (SoPhA)<br>
 			June 30<sup>th</sup>&ndash;July 2<sup>nd</sup>, 2025<br>
 			Nantes, France (refereed)
 		</p>
