--- a/misc/index.html
+++ b/misc/index.html
@@ -56,13 +56,18 @@
 
 	<!-- Misc -->
 	<div class="container pt-4 pb-4">
+		<h5>
+			Service
+		</h5>
 		<p>
-			I&rsquo;m an elected member of the French National Committee for Scientific Research (<a href="https://www.cnrs.fr/comitenational/" target="_blank" rel="noopener">CoNRS</a>).<br>
+			I&rsquo;m a member of the French National Committee for Scientific Research (<a href="https://www.cnrs.fr/comitenational/" target="_blank" rel="noopener">CoNRS</a>).<br>
 			<a href="https://www.cnrs.fr/comitenational/contact/annuaire.php?inst=36" target="_blank" rel="noopener">Section 36</a>, Language sciences (Sept. 2025 - Sept. 2029).
 		</p>
-		<p>***</p>
+		<h5>
+			Refereeing
+		</h5>
 		<p>
-			I&rsquo;ve refereed papers, chapters or abstracts for:
+			I&rsquo;ve reviewed papers, chapters, books, or abstracts for:
 			<ul>
 				<li>Acta Analytica</li>
 				<li>Analysis</li>
@@ -76,6 +81,7 @@
 				<li>Idealistic Studies</li>
 				<li>Inquiry: An Interdisciplinary Journal of Philosophy</li>
 				<li>International Journal of Philosophical Studies</li>
+				<li>Journal of Indian Philosophy</li>
 				<li>Journal of Pragmatics</li>
 				<li>Klesis</li>
 				<li>Lexique</li>
@@ -103,27 +109,48 @@
 				<li>Oxford University Press</li>
 			</ul>
 			<ul>
-				<li>Context, Cognition and Communication (<a href="http://ccc-conference.org/" target="_blank" rel="noopener">CCC</a>)</li>
-				<li>Language and Languages at the Crossroad of Disciplines (<a href="https://llcd.cnrs.fr/en/" target="_blank" rel="noopener">LLcD</a>)</li>
-				<li>Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)</li>
-				<li>Congress of the <a href="https://sophaphilo.org/" target="_blank" rel="noopener">SoPhA</a></li>
+				<li>
+					Context, Cognition and Communication (<a href="http://ccc-conference.org/" target="_blank" rel="noopener">CCC</a>)
+				</li>
+				<li>
+					Language and Languages at the Crossroad of Disciplines (<a href="https://llcd.cnrs.fr/en/" target="_blank" rel="noopener">LLcD</a>)
+				</li>
+				<li>
+					Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)
+				</li>
+				<li>
+					Congress of the <a href="https://sophaphilo.org/" target="_blank" rel="noopener">SoPhA</a>
+				</li>
 			</ul>
 		</p>
-		<p>***</p>
+		<h5>
+			Membership
+		</h5>
 		<p>
-			I&rsquo;m a member of:
 			<ul>
-				<li>the <a href="http://analyticphilosophy.eu/" target="_blank" rel="noopener">European Society for Analytic Philosophy</a></li>
-				<li>the <a href="https://www.aristoteliansociety.org.uk/" target="_blank" rel="noopener">Aristotelian Society</a></li>
-				<li>the <a href="https://alumni-ehess.fr/" target="_blank" rel="noopener">EHESS Alumni Association</a></li>
-				<li>the <a href="https://alumni.harvard.edu/" target="_blank" rel="noopener">Harvard Alumni Association</a></li>
-				<li>the <a href="https://www.humboldt-foundation.de/" target="_blank" rel="noopener">Alumni of the Alexander von Humboldt-Stiftung</a>
+				<li>
+					<a href="http://analyticphilosophy.eu/" target="_blank" rel="noopener">European Society for Analytic Philosophy</a>
+				</li>
+				<li>
+					<a href="https://www.aristoteliansociety.org.uk/" target="_blank" rel="noopener">Aristotelian Society</a>
+				</li>
+				<li>
+					<a href="https://alumni-ehess.fr/" target="_blank" rel="noopener">EHESS Alumni Association</a>
+				</li>
+				<li>
+					<a href="https://alumni.harvard.edu/" target="_blank" rel="noopener">Harvard Alumni Association</a>
+				</li>
+				<li>
+					<a href="https://www.humboldt-foundation.de/" target="_blank" rel="noopener">Alumni of the Alexander von Humboldt-Stiftung</a>
+				</li>
 			</ul>
 		</p>
-		<p>***</p>
+		<h5>
+			Varia
+		</h5>
 		<p>
 			Native speaker of Italian and of a dialect of <a href="https://glottolog.org/resource/languoid/id/lomb1257" target="_blank" rel="noopener">Lombard</a>.<br>
-			English, French, and ILR Level 1 (at best) German.<br>
+			English, French, and rudimentary German.<br>
 			Latin and Ancient Greek.<br>
 			First-gen university student.
 		</p>
