--- a/research/index.html
+++ b/research/index.html
@@ -57,8 +57,8 @@
 	<!-- Research -->
 	<div class="container pt-4 pb-4">
 		<p>
-			Some publications, more or less in reverse chronological order.<br>
-			<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.
+			Some publications, roughly in reverse chronological order.<br>
+			(<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.)
 		</p>
 
 		<p>
