--- a/misc/index.html
+++ b/misc/index.html
@@ -61,7 +61,7 @@
 		</h5>
 		<p>
 			I&rsquo;m a member of the French National Committee for Scientific Research (<a href="https://www.cnrs.fr/comitenational/" target="_blank" rel="noopener">CoNRS</a>).<br>
-			<a href="https://www.cnrs.fr/comitenational/contact/annuaire.php?inst=36" target="_blank" rel="noopener">Section 36</a>, Language sciences (Sept. 2025 - Sept. 2029).
+			<a href="https://www.cnrs.fr/comitenational/english/section.php?sec=36" target="_blank" rel="noopener">Section 36</a>, Language sciences (Sept. 2025 - Sept. 2029).
 		</p>
 		<h5>
 			Refereeing
