--- a/research/index.html
+++ b/research/index.html
@@ -58,8 +58,7 @@
 	<div class="container pt-4 pb-4">
 		<p>
 			Some publications, roughly in reverse chronological order.<br>
-			<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.<br>
-			* indicates non-peer-reviewed.			
+			<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.
 		</p>
 
 		<p>
