--- a/misc/index.html
+++ b/misc/index.html
@@ -119,6 +119,9 @@
 					Paris Syntax and Semantics (<a href="http://www.cssp.cnrs.fr/index_en.html" target="_blank" rel="noopener">CSSP</a>)
 				</li>
 				<li>
+					Logic and Engineering of Natural Language Semantics (<a href="https://lenls.github.io/lenls21/" target="_blank" rel="noopener">LENLS</a>)
+				</li>
+				<li>
 					Congress of the <a href="https://sophaphilo.org/" target="_blank" rel="noopener">SoPhA</a>
 				</li>
 			</ul>
