--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 	<div class="container pt-4 pb-4">
 		<div class="row justify-content-center">
 			<div class="col-xl-3 col-lg-4 col-md-5 col-6">
-				<img src="images/iw.jpeg" class="img-fluid mt-1 mb-4 rounded-circle img-thumbnail" alt="Pic">
+				<img src="images/JA-ap.jpg" class="img-fluid mt-1 mb-4 rounded-circle img-thumbnail" alt="Pic">
 			</div>
 			<div class="col-xl-9 col-lg-8 col-md-12 col-12">
-				<p>
+				<p class=mt-2>
 					I&rsquo;m a <a href="https://www.cnrs.fr/" target="_blank" rel="noopener">CNRS</a> researcher and a member of the <a href="https://stl.univ-lille.fr/" target="_blank" rel="noopener">STL</a> lab in Lille, France.
 				</p>
 				<p>
@@ -81,14 +81,16 @@
 				<p>
 					Earlier on, I got a PhD in philosophy and cognitive science from <a href="https://www.unisr.it" target="_blank" rel="noopener">San Raffaele University</a> &amp;
 					<a href="https://www.nets.iusspavia.it/about/index.php" target="_blank" rel="noopener">NeTS</a>,
-					and a PhD in philosophy and social science from the <a href="http://www.institutnicod.org" target="_blank" rel="noopener">Institut Jean Nicod</a>.
+					and a PhD in philosophy and social science from the <a href="http://www.institutnicod.org" target="_blank" rel="noopener">Institut Jean Nicod</a> at <a href="https://www.ens.psl.eu/" target="_blank" rel="noopener">ENS Paris</a>.
 					Along the way, I&rsquo;ve been a visiting student at <a href="https://philosophy.mit.edu" target="_blank" rel="noopener">MIT Linguistics and Philosophy</a>,
 					a visiting fellow at <a href="https://gsas.harvard.edu" target="_blank" rel="noopener">Harvard&rsquo;s GSAS</a>,
 					and a visiting fellow at the <a href="https://www.fmsh.fr" target="_blank" rel="noopener">Fondation Maison des Sciences de l&rsquo;Homme</a>.
 				</p>
 				<p>
 					My complete CV and some drafts are available <a href="https://lcgasparri.github.io/contact/">on request</a>.
-					Image: an impossible world, according to <a href="https://en.wikipedia.org/wiki/Stable_Diffusion" target="_blank" rel="noopener">Stable Diffusion 2.1</a>.
+				</p>
+				<p>
+					Image: &lsquo;Aperture&rsquo;, by <a href="https://www.instagram.com/jasonandersonart/" target="_blank" rel="noopener">Jason Anderson</a>.
 				</p>
 			</div>
 		</div>
