--- a/talks/index.html
+++ b/talks/index.html
@@ -60,7 +60,7 @@
 			Some recent / upcoming presentations.
 		</p>
 		<p>
-			<em>Logic and Engineering of Natural Language Semantics 21</em> (LENLS21)<br>
+			<em>Logic and Engineering of Natural Language Semantics 21</em> (LENLS)<br>
 			November 28<sup>th</sup>&ndash;30<sup>th</sup>, 2025<br>
 			Nagoya, Japan (invited)
 		</p>
