--- a/research/index.html
+++ b/research/index.html
@@ -70,9 +70,26 @@
 	<!-- Research -->
 	<div class="container pt-4 pb-4">
 		<p>
-			Some publications, roughly in reverse chronological order.<br>
-			<a href="https://lcgasparri.github.io/contact/">Email me</a> me for the complete list.
+			Some publications, more or less in reverse chronological order.<br>
+			If you&rsquo;d like the full list or need a file you can&rsquo;t download from here, <a href="https://lcgasparri.github.io/contact/">email me</a>.
 		</p>
+
+		<p>
+			<strong>Possessive freedom</strong><br>
+			In <em>Possession and the Part-Whole Relationship in Language</em>, Oxford UP<br>
+			<a data-bs-toggle="collapse" href=#poss-freedom aria-expanded="false" role="button" aria-controls=animal-meta>abstract</a> |
+			to appear
+		</p>
+		<div id=poss-freedom class=collapse>
+			<p class="font-monospace small">
+				Prototypical possessives express relations whose content can be controlled by the discourse context and by the situation of utterance.
+				For instance, while <em>John&rsquo;s nephews</em> is readily taken to denote a set of individuals that stand in the <u>nephew</u> relation with John, given an appropriate context the genitive can felicitously pick out, say, a set of nephews that John has been tasked with supervising during a field trip.
+				Many treatments regard this relational plasticity as a hallmark of possessive status. But what does this freedom of the possessive relation exactly amount to?
+				Peters &amp; Westerst&aring;hl (2013) characterize the property thus: &ldquo;Every possessive DP can be used in a sentence S in a context where that DP&rsquo;s possessive relation is none of the options provided semantically by S but instead comes somehow from the context in which the sentence is used.&rdquo;
+				I offer an argument that a suitably disambiguated reading of this characterization licenses in turn two distinct readings, and that there is a non-trivial choice to make over which of these readings is preferable.
+				Along the way, I comment on some broader aspects of the demarcation between genuine possessives and their lookalikes, distinguish the freedom of the possessive from similar properties that may be confused with it, and rectify some, I believe, less-than-perfectly-helpful observations about the pragmatic malleability of possessives in the theoretical landscape.
+			</p>
+		</div>
 
 		<p>
 			<strong>Animal metasemantics</strong><br>
