--- a/research/index.html
+++ b/research/index.html
@@ -69,15 +69,27 @@
 
 	<!-- Research -->
 	<div class="container pt-4 pb-4">
-		<p>
-			Some publications, more or less in reverse chronological order.<br>
-			If you&rsquo;d like the full list or need a file you can&rsquo;t download from here, <a href="https://lcgasparri.github.io/contact/">email me</a>.
+		<p class="pb-4">
+			Some publications, roughly in reverse chronological order.<br>
+			For the full list, or if you need a file you can&rsquo;t find, <a href="https://lcgasparri.github.io/contact/">email me</a>.
 		</p>
+
+		<p>
+			<strong>Words, articulations, and utterance plans</strong><br>
+			<em>Philosophy and Phenomenological Research</em><br>
+			<a data-bs-toggle="collapse" href=#words-art aria-expanded="false" role="button" aria-controls=words-art>abstract</a> |
+			in press
+		</p>
+		<div id=words-art class=collapse>
+			<p class="font-monospace small">
+				Coming soon.
+			</p>
+		</div>
 
 		<p>
 			<strong>Possessive freedom</strong><br>
 			In <em>Possession and the Part-Whole Relationship in Language</em>, Oxford UP<br>
-			<a data-bs-toggle="collapse" href=#poss-freedom aria-expanded="false" role="button" aria-controls=animal-meta>abstract</a> |
+			<a data-bs-toggle="collapse" href=#poss-freedom aria-expanded="false" role="button" aria-controls=poss-freedom>abstract</a> |
 			to appear
 		</p>
 		<div id=poss-freedom class=collapse>
