--- a/research/index.html
+++ b/research/index.html
@@ -78,11 +78,17 @@
 			<strong>Words, articulations, and utterance plans</strong><br>
 			<em>Philosophy and Phenomenological Research</em><br>
 			<a data-bs-toggle="collapse" href=#words-art aria-expanded="false" role="button" aria-controls=words-art>abstract</a> |
-			in press
+			AAM under embargo |
+			<a href="https://doi.org/10.1111/phpr.70096" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=words-art class=collapse>
 			<p class="font-monospace small">
-				Coming soon.
+				Under what conditions does an externale (a sequence of speech sounds, a mark of ink) qualify as an articulation of a word?
+				Standard approaches to the issue appeal to intentions and to the satisfaction of performance standards, but these treatments are challenged by the intuitive admissibility of unintentional and anomalous tokens.
+				Recently, alternatives appealing to the role of lexical access in word production have been considered, but these, I argue, are threatened by counterexamples of their own.
+				In this paper, I leverage formal and empirical insights into the architecture of utterance production to present a new hypothesis.
+				The main idea is this: for an externale produced by a speaker to qualify as a token of a word, it must originate from the execution of an utterance score that incorporates the local standards over the word&rsquo;s form.
+				I explain how this approach threads the needle between some key desiderata and can accommodate the case studies that challenge its competitors.
 			</p>
 		</div>
 
